--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="logout_jpn">ログアウト</string>
     <string name="network">ネットワーク</string>
     <string name="error">エラー</string>
+    <string name="result">結果</string>
 </resources>
